--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "developers-portfolio",
+  "name": "nesskim-portfolio",
   "description": "A personal static portfolio hosted with GitHub Pages, built to showcase my recent projects.",
-  "homepage": "http://hashirshoaeb.com/home",
+  "homepage": "https://nesskim.github.io/home",
   "version": "2.0.0",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
