--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Nesskim-portfolio",
   "description": "A personal portfolio hosted with GitHub Pages, built to showcase my recent projects.",
-  "homepage": "https://nesskim.github.io/home",
+  "homepage": "https://nesskim.github.io/",
   "version": "2.0.0",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
